--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title>Drink Tracker v1</title>
-        <link rel="stylesheet" src="" />
+        <link rel="stylesheet" href="css/mobile.css" />
     </head>
     <body>
-        <div id="#mob_container">
+        <div id="mob_container">
             <table width="100%">
                 <tr>
                     <td>Drink1</td>
