--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
     <head>
         <title>Drink Tracker v1</title>
         <link rel="stylesheet" href="css/mobile.css" />
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+        <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+        <script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <div id="mob_container">
-            <table width="100%">
-                <tr>
-                    <td>Drink1</td>
-                    <td>Drink2</td>
-                </tr>
-                <tr>
-                    <td>Drink3</td>
-                    <td>Drink4</td>
-                </tr>
-            </table> 
+        <div data-role="page"> 
+            <div data-role="header">
+                <h1>Drink Tracker</h1>
+            </div> 
+            <div data-role="content" data-theme="a">
+                <div data-role="controlgroup" data-type="horizontal">
+                    <a href="index.html" data-role="button" data-theme="e">Beer</a>
+                    <a href="index.html" data-role="button" data-theme="e">Wine</a>
+                </div>
+                 <div data-role="controlgroup" data-type="horizontal">
+                    <a href="index.html" data-role="button" data-theme="e">Cocktail</a>
+                    <a href="index.html" data-role="button" data-theme="e">Shots!</a>
+                </div> 
+            </div> 
+            <div data-role="footer">
+                <h6>Built at AngelHack after a night of too much (yet unknown) consumption</h6>
+            </div> 
         </div>
     </body>
 </html>
