--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
             </div> 
             <div data-role="content" data-theme="a">
                 <div data-role="controlgroup" data-type="horizontal">
-                    <a href="#" data-role="button" data-theme="e" onClick="writeLocalStorage">Beer</a>
+                    <a href="#" data-role="button" data-theme="e" onClick="addDrink('beer');">Beer</a>
                     <a href="#" data-role="button" data-theme="e">Wine</a>
                 </div>
                  <div data-role="controlgroup" data-type="horizontal">
