onclick for all links

--- a/client/index.html
+++ b/client/index.html
@@ -18,11 +18,11 @@
             <div data-role="content" data-theme="a">
                 <div data-role="controlgroup" data-type="horizontal">
                     <a href="#" data-role="button" data-theme="e" onClick="addDrink('beer');">Beer</a>
-                    <a href="#" data-role="button" data-theme="e">Wine</a>
+                    <a href="#" data-role="button" data-theme="e" onClick="addDrink('wine');">Wine</a>
                 </div>
                  <div data-role="controlgroup" data-type="horizontal">
-                    <a href="#" data-role="button" data-theme="e">Cocktail</a>
-                    <a href="#" data-role="button" data-theme="e">Shots!</a>
+                    <a href="#" data-role="button" data-theme="e" onClick="addDrink('cocktail');">Cocktail</a>
+                    <a href="#" data-role="button" data-theme="e" onClick="addDrink('shots');">Shots!</a>
                 </div> 
             </div> 
             <div data-role="footer">
