--- a/client/index.html
+++ b/client/index.html
@@ -4,16 +4,18 @@
         <title>Drink Tracker v1</title>
         <link rel="stylesheet" href="css/mobile.css" />
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+        
         <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
         <script src="js/script.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
         <div data-role="page"> 
             <div class="top_bar" data-role="header">
                 <h1>Drink Tracker</h1>
-                <a href="#" class="right-settings" data-role="button" data-icon="gear"></a>
+                <a href="settings.html" class="right-settings" data-role="button" data-icon="gear"></a>
             </div> 
             <div data-role="content" data-theme="a">
                 <div data-role="controlgroup" data-type="horizontal">
