--- a/client/settings.html
+++ b/client/settings.html
@@ -24,7 +24,7 @@
                 </div>
             </div> 
             <div data-role="footer">
-                <h6>Built at AngelHack after a night of too much (yet unknown) consumption</h6>
+                <h6>Built at AngelHack</h6>
             </div> 
         </div>
     </body>
