--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
                 <h1>Drink Tracker</h1>
                 <a href="settings.html" class="right-settings" data-role="button" data-icon="gear">Settings</a>
             </div> 
-            <div data-role="content" data-theme="a">
+            <div data-role="content" data-theme="e">
                 <div data-role="controlgroup" data-type="horizontal">
                     <a href="#" data-role="button" data-theme="e" onClick="addDrink('beer');">Beer</a>
                     <a href="#" data-role="button" data-theme="e" onClick="addDrink('wine');">Wine</a>
