--- a/client/settings.html
+++ b/client/settings.html
@@ -17,7 +17,7 @@
                 <h1>Settings</h1>
                 <a href="index.html" class="right-settings" data-role="button" data-icon="home">Home</a>
             </div> 
-            <div data-role="content" data-theme="a">
+            <div data-role="content" data-theme="e">
                 <div data-role="fieldcontain">
                     <label for="Email">Email:</label>
                     <input type="email" name="email" id="email" value=""  />
