--- a/client/index.html
+++ b/client/index.html
@@ -15,16 +15,16 @@
         <div data-role="page"> 
             <div class="top_bar" data-role="header">
                 <h1>Drink Tracker</h1>
-                <a href="settings.html" class="right-settings" data-role="button" data-icon="gear">Settings</a>
+                <a href="settings.html" class="right-settings" data-role="button" data-icon="gear" data-transition="flip">Settings</a>
             </div> 
             <div data-role="content" data-theme="e">
                 <div data-role="controlgroup" data-type="horizontal">
                     <a href="#" data-role="button" data-theme="e" onClick="addDrink('beer');">Beer</a>
-                    <a href="#" data-role="button" data-theme="e" onClick="addDrink('wine');">Wine</a>
+                    <a href="#" data-role="button" data-theme="e" onClick="addDrink('shots');">Shots</a>
                 </div>
                  <div data-role="controlgroup" data-type="horizontal">
-                    <a href="#" data-role="button" data-theme="e" onClick="addDrink('cocktail');">Cocktail</a>
-                    <a href="#" data-role="button" data-theme="e" onClick="addDrink('shots');">Shots!</a>
+                    <a href="#" data-role="button" data-theme="e" onClick="addDrink('spirits');">Spirit</a>
+                    <a href="#" data-role="button" data-theme="e" onClick="addDrink('wine');">Wine</a>
                 </div> 
             </div> 
             <div data-role="footer">
