--- a/client/settings.html
+++ b/client/settings.html
@@ -15,7 +15,7 @@
         <div data-role="page"> 
             <div class="top_bar" data-role="header">
                 <h1>Settings</h1>
-                <a href="index.html" class="right-settings" data-role="button" data-icon="home">Home</a>
+                <a href="index.html" class="right-settings" data-role="button" data-icon="home" data-transition="flip">Home</a>
             </div> 
             <div data-role="content" data-theme="e">
                 <div data-role="fieldcontain">
