--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Drink Tracker v1</title>
+        <title>GoonBuggy v1</title>
         <link rel="stylesheet" href="css/mobile.css" />
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
         
@@ -14,7 +14,7 @@
     <body>
         <div data-role="page"> 
             <div class="top_bar" data-role="header">
-                <h1>Drink Tracker</h1>
+                <h1>Goon Buggy</h1>
                 <a href="settings.html" class="right-settings" data-role="button" data-icon="gear" data-transition="flip">Settings</a>
             </div> 
             <div data-role="content" data-theme="e">
