--- a/client/settings.html
+++ b/client/settings.html
@@ -7,11 +7,17 @@
         
         <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
-        <script src="js/script.js"></script>
+        <script src="js/script.js">
+
+       $('body').live('pageinit',function(event){
+          alert('This page was just enhanced by jQuery Mobile!');
+        });
+        
+        </script>
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
-    <body>
+    <body id='settingsPage'>
         <div data-role="page"> 
             <div class="top_bar" data-role="header">
                 <h1>Settings</h1>
@@ -20,8 +26,9 @@
             <div data-role="content" data-theme="e">
                 <div data-role="fieldcontain">
                     <label for="Email">Email:</label>
-                    <input type="email" name="email" id="email" value=""  />
+                    <input type="email" name="email" id="email" />
                 </div>
+                <input type="button" value='Update' />
             </div> 
             <div data-role="footer">
                 <h6>Built at AngelHack</h6>
