counter in middle

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,11 @@
                     <a href="#" data-role="button" data-theme="e" onClick="addDrink('beer');">Beer</a>
                     <a href="#" data-role="button" data-theme="e" onClick="addDrink('shots');">Shots</a>
                 </div>
+                <div data-role="controlgroup" data-type="horizontal">
+
+                    <input type="text" name="drink_count" id="drink_count" value="" style="text-align:center;"/>
+
+                </div>
                  <div data-role="controlgroup" data-type="horizontal">
                     <a href="#" data-role="button" data-theme="e" onClick="addDrink('spirits');">Spirit</a>
                     <a href="#" data-role="button" data-theme="e" onClick="addDrink('wine');">Wine</a>
