--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <div data-role="controlgroup" data-type="horizontal">
 
-                    <input type="text" name="drink_count" id="drink_count" value="" style="text-align:center;"/>
+                    <h3 name="drink_count" id="drink_count" value="" style="text-align:center; font-size:1.4em; color:red;" data-theme="c">0</h3>
 
                 </div>
                  <div data-role="controlgroup" data-type="horizontal">
