--- a/client/settings.html
+++ b/client/settings.html
@@ -18,6 +18,7 @@
                 }
                 else {
                     $('#email_text').val('Please enter an email now');
+                    $('<a />').attr({'href': '#set_email', 'data-rel': 'dialog'}).click();
                 }
 
             });
@@ -43,6 +44,15 @@
             <div data-role="footer">
                 <h6>Built at AngelHack</h6>
             </div> 
+        </div>
+
+        <div data-role="page" id="set_email">
+            <div class="top_bar" data-role="header">
+                <h2>No Email</h2>
+            </div>
+            <div data-role="content" data-theme="e">
+                <p>Please set an email so we can harass you in the morning :)</p>
+            </div>
         </div>
     </body>
 </html>
