--- a/client/index.html
+++ b/client/index.html
@@ -33,8 +33,8 @@
             </div> 
             <div data-role="content" data-theme="e">
                 <div data-role="controlgroup" data-type="horizontal">
-                    <a href="#" data-role="button" data-theme="e" onClick="addDrink('beer');">Beer</a>
-                    <a href="#" data-role="button" data-theme="e" onClick="addDrink('shots');">Shots</a>
+                    <a href="#" onClick="addDrink('beer');"><img src="img/mixed.jpg" height="140px"></a>
+                    <a href="#" onClick="addDrink('shots');"><img src="img/mixed.jpg" height="140px"></a>
                 </div>
                 <div data-role="controlgroup" data-type="horizontal">
 
@@ -42,8 +42,8 @@
 
                 </div>
                  <div data-role="controlgroup" data-type="horizontal">
-                    <a href="#" data-role="button" data-theme="e" onClick="addDrink('spirits');">Spirit</a>
-                    <a href="#" data-role="button" data-theme="e" onClick="addDrink('wine');">Wine</a>
+                    <a href="#" onClick="addDrink('spirits');"><img src="img/mixed.jpg" height="140px"></a>
+                    <a href="#" onClick="addDrink('wine');"><img src="img/mixed.jpg" height="140px"></a>
                 </div> 
             </div> 
             <div data-role="footer">
