centered and smaller

--- a/client/index.html
+++ b/client/index.html
@@ -33,17 +33,21 @@
             </div> 
             <div data-role="content" data-theme="e">
                 <div data-role="controlgroup" data-type="horizontal">
-                    <a href="#" onClick="addDrink('beer');"><img src="img/mixed.jpg" height="140px"></a>
-                    <a href="#" onClick="addDrink('shots');"><img src="img/mixed.jpg" height="140px"></a>
+                    <center>
+                        <a href="#" onClick="addDrink('beer');"><img src="img/mixed.jpg" height="120px"></a>
+                        <a href="#" onClick="addDrink('shots');"><img src="img/mixed.jpg" height="120px"></a>
+                    </center>
                 </div>
                 <div data-role="controlgroup" data-type="horizontal">
 
-                    <h3 name="drink_count" id="drink_count" value="" style="text-align:center; font-size:1.4em; color:red;" data-theme="c">0</h3>
+                    <h3 name="drink_count" id="drink_count" value="" style="text-align:center; font-size:1.2em; color:red; padding:0;margin-top:0px;margin-bottom:0px;" data-theme="c">0</h3>
 
                 </div>
                  <div data-role="controlgroup" data-type="horizontal">
-                    <a href="#" onClick="addDrink('spirits');"><img src="img/mixed.jpg" height="140px"></a>
-                    <a href="#" onClick="addDrink('wine');"><img src="img/mixed.jpg" height="140px"></a>
+                    <center>
+                        <a href="#" onClick="addDrink('spirits');"><img src="img/mixed.jpg" height="120px"></a>
+                        <a href="#" onClick="addDrink('wine');"><img src="img/mixed.jpg" height="120px"></a>
+                    </center>
                 </div> 
             </div> 
             <div data-role="footer">
