--- a/client/index.html
+++ b/client/index.html
@@ -34,8 +34,8 @@
             <div data-role="content" data-theme="e">
                 <div data-role="controlgroup" data-type="horizontal">
                     <center>
-                        <a href="#" onClick="addDrink('beer');"><img src="img/mixed.jpg" height="120px"></a>
-                        <a href="#" onClick="addDrink('shots');"><img src="img/mixed.jpg" height="120px"></a>
+                        <a href="#" onClick="addDrink('beer');"><img src="img/beer.jpg" height="120px"></a>
+                        <a href="#" onClick="addDrink('shots');"><img src="img/shots.jpg" height="120px"></a>
                     </center>
                 </div>
                 <div data-role="controlgroup" data-type="horizontal">
@@ -57,7 +57,7 @@
 
         <div data-role="page" id="drink_dialog">
             <div class="top_bar" data-role="header">
-                <h2>Drink Logged</h2>
+                <h2>Whoop</h2>
             </div>
             <div data-role="content" data-theme="e">
                 <p id="drink_message" style="text-align:center;"></p>
