--- a/client/index.html
+++ b/client/index.html
@@ -46,7 +46,7 @@
                  <div data-role="controlgroup" data-type="horizontal">
                     <center>
                         <a href="#" onClick="addDrink('spirits');"><img src="img/mixed.jpg" height="120px"></a>
-                        <a href="#" onClick="addDrink('wine');"><img src="img/mixed.jpg" height="120px"></a>
+                        <a href="#" onClick="addDrink('wine');"><img src="img/wine.jpg" height="120px"></a>
                     </center>
                 </div> 
             </div> 
@@ -57,7 +57,7 @@
 
         <div data-role="page" id="drink_dialog">
             <div class="top_bar" data-role="header">
-                <h2>Whoop</h2>
+                <h2></h2>
             </div>
             <div data-role="content" data-theme="e">
                 <p id="drink_message" style="text-align:center;"></p>
