--- a/client/settings.html
+++ b/client/settings.html
@@ -41,7 +41,7 @@
                 </div>
                 <div data-role="controlgroup" data-type="horizontal">
                     <input type="button" value='Update' onClick="setEmail(document.getElementById('email_text').value)"/>
-                    <input type="button" value='Send Report' onClick="setEmail(document.getElementById('email_text').value)"/>
+                    <input type="button" value='Send Report' onClick="sendDailyReport()"/>
                 </div>
             </div>
             <div data-role="footer">
