--- a/client/settings.html
+++ b/client/settings.html
@@ -8,9 +8,14 @@
         <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
         <script src="js/script.js"></script>
-
-
-        
+        <script type="text/javascript">
+                var inmobi_conf = {
+                    siteid : "4028cba633ededba01340d4f9323045f",
+                    slot : "15",
+                    test: true
+                };
+        </script>
+        <script type="text/javascript" src="http://cf.cdn.inmobi.com/ad/inmobi.js"></script>
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
          <script type="text/javascript">
@@ -59,6 +64,7 @@
                     <input type="button" value='Send Report' onClick="sendDailyReport()"/>
                 </center>
                 </div>
+        
             </div>
             <div data-role="footer">
                 <h6>Built at AngelHack</h6>
