--- a/client/settings.html
+++ b/client/settings.html
@@ -8,17 +8,23 @@
         <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
         <script src="js/script.js"></script>
+        
         <script type="text/javascript">
+                var geo = geoCoordsArray();
+                var llstring = geo['lat'] + ',' + geo['long'];
+
                 var inmobi_conf = {
                     siteid : "4028cba633ededba01340d4f9323045f",
                     slot : "15",
-                    test: true
+                    test: true,
+                    interests: "alcohol, drinking",
+                    latlong: llstring
                 };
         </script>
         <script type="text/javascript" src="http://cf.cdn.inmobi.com/ad/inmobi.js"></script>
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-         <script type="text/javascript">
+        <script type="text/javascript">
 
           var _gaq = _gaq || [];
           _gaq.push(['_setAccount', 'UA-27466133-1']);
