not testing adverts

--- a/client/settings.html
+++ b/client/settings.html
@@ -16,12 +16,11 @@
                 var inmobi_conf = {
                     siteid : "4028cba633ededba01340d4f9323045f",
                     slot : "15",
-                    test: true,
+                    test: false,
                     interests: "alcohol, drinking",
                     latlong: llstring
                 };
         </script>
-        <script type="text/javascript" src="http://cf.cdn.inmobi.com/ad/inmobi.js"></script>
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script type="text/javascript">
@@ -70,7 +69,9 @@
                     <input type="button" value='Send Report' onClick="sendDailyReport()"/>
                 </center>
                 </div>
-        
+                <div data-role="controlgroup">
+                    <script type="text/javascript" src="http://cf.cdn.inmobi.com/ad/inmobi.js"></script>
+                </div>
             </div>
             <div data-role="footer">
                 <h6>Built at AngelHack</h6>
