--- a/client/settings.html
+++ b/client/settings.html
@@ -70,7 +70,18 @@
                 </center>
                 </div>
                 <div data-role="controlgroup">
-                    <script type="text/javascript" src="http://cf.cdn.inmobi.com/ad/inmobi.js"></script>
+                    <script type="text/javascript">
+                        var mopub_ad_unit='agltb3B1Yi1pbmNyDQsSBFNpdGUYmMi8Egw';
+
+                        //Be sure to set these to the size of your adunit
+                        var mopub_ad_width=320; //optional
+                        var mopub_ad_height=50; //optional
+
+                        //Use custom keywords appropriate for your mobile webpage
+                        //var mopub_keywords= "custom keywords"; //optional
+                    </script>
+                    <script src="http://ads.mopub.com/js/client/mopub.js"></script>
+                    <!--<script type="text/javascript" src="http://cf.cdn.inmobi.com/ad/inmobi.js"></script> -->
                 </div>
             </div>
             <div data-role="footer">
