moved ad to footer, changed back to inmobi

--- a/client/settings.html
+++ b/client/settings.html
@@ -4,7 +4,9 @@
         <title>GoonBuggy v1</title>
         <link rel="stylesheet" href="css/mobile.css" />
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
-        
+
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+
         <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
         <script src="js/script.js"></script>
@@ -31,7 +33,6 @@
                 //Use custom keywords appropriate for your mobile webpage
                 //var mopub_keywords= "custom keywords"; //optional
         </script> 
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script type="text/javascript">
 
           var _gaq = _gaq || [];
@@ -78,11 +79,10 @@
                     <input type="button" value='Send Report' onClick="sendDailyReport()"/>
                 </center>
                 </div>
-                    <script type="text/javascript" src="http://ads.mopub.com/js/client/mopub.js"></script>
-                    <!--<script src="http://cf.cdn.inmobi.com/ad/inmobi.js"></script>-->
             </div>
             <div data-role="footer">
-                <h6>Built at AngelHack</h6>
+                <!--<script type="text/javascript" src="http://ads.mopub.com/js/client/mopub.js"></script>-->
+                <script src="http://cf.cdn.inmobi.com/ad/inmobi.js"></script>
             </div> 
         </div>
 
