--- a/client/settings.html
+++ b/client/settings.html
@@ -82,7 +82,7 @@
             </div>
             <div data-role="footer">
                 <!--<script type="text/javascript" src="http://ads.mopub.com/js/client/mopub.js"></script>-->
-                <script src="http://cf.cdn.inmobi.com/ad/inmobi.js"></script>
+                <script type="text/javascript" src="http://cf.cdn.inmobi.com/ad/inmobi.js"></script>
             </div> 
         </div>
 
